--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 						<a href="https://github.com/ArquiteturaJoel">GitHub/ArquiteturaJoel</a></li>
 					<li>Hi, I am Karthick Thoppe and my profile link is
 						<a href="https://github.com/karthicktv">GitHub/karthicktv</a></li>
-				        <li>Hi, I am Lisa and my profile link is
+				        <li>Hi, I am Lisa B. and my profile link is
 						<a href="https://github.com/lisablunt">GitHub/lisablunt</a></li>
 				</b>
 			</ol>
